refactor: fix name folder

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</section>
 				<section class="intro">
 					<h3>What is React?</h3>
-					<img src="/image/react.png" alt="react" width="200">
+					<img src="/images/react.png" alt="react" width="200">
 					<p class="fragment fade-in">JavaScript library created by Facebook</p>
 					<p class="fragment fade-in">Tool for building UI components</p>
 				</section>
@@ -40,7 +40,7 @@
 					
 					<section>
 						<h3>Virtual Dom</h3>
-						<img src="/image/vdom.png" alt="vdom" width="70%">
+						<img src="/images/vdom.png" alt="vdom" width="70%">
 					</section>
 					<section>
 						<h2 data-id="code-title">JSX</h2>
@@ -81,12 +81,12 @@
 					<section>
 						<h3>Props</h3>
 						<p>Props are arguments passed into React components</p>
-					<img src="/image/props.png" alt="props">
+					<img src="/images/props.png" alt="props">
 
 					</section>
 					<section>
 						<h3>State</h3>
-						<img src="/image/state.png" alt="state">
+						<img src="/images/state.png" alt="state">
 						<p>Use this.setState to change state</p>
 					</section>
 				</section>
